--- a/WindowExplorer/Sources/Controllers/MenuViewController/Menu.storyboard
+++ b/WindowExplorer/Sources/Controllers/MenuViewController/Menu.storyboard
@@ -10,11 +10,11 @@
             <objects>
                 <viewController id="AWf-NK-kp0" customClass="MenuViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="AdH-oQ-xB7">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="50" height="350"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XSL-8U-p48">
-                                <rect key="frame" x="0.0" y="250" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="300" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="ZuQ-R3-pkR"/>
                                     <constraint firstAttribute="height" constant="50" id="tgK-0D-WW1"/>
@@ -22,32 +22,39 @@
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="s3y-ox-dYc"/>
                             </imageView>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YH7-tX-fhw">
-                                <rect key="frame" x="0.0" y="200" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="250" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="mz3-xN-JgI"/>
                                 </constraints>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ZZq-63-8Q9"/>
                             </imageView>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w1D-MX-hx3">
-                                <rect key="frame" x="0.0" y="150" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="200" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="4jJ-XJ-ov1"/>
                                 </constraints>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Pan-ey-4a3"/>
                             </imageView>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FRJ-wF-ukw">
-                                <rect key="frame" x="0.0" y="100" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="150" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="NM9-Sv-kbi"/>
                                 </constraints>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Zwa-5w-z3R"/>
                             </imageView>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ed7-a7-wxz">
-                                <rect key="frame" x="0.0" y="50" width="50" height="50"/>
+                                <rect key="frame" x="0.0" y="100" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Zef-0g-RyZ"/>
                                 </constraints>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Nka-6M-Vao"/>
+                            </imageView>
+                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dnJ-Po-P9r">
+                                <rect key="frame" x="0.0" y="50" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="4YC-FU-SLE"/>
+                                </constraints>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="MWi-LQ-lcn"/>
                             </imageView>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fLv-1R-6Ot">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -58,6 +65,7 @@
                             </imageView>
                         </subviews>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="dnJ-Po-P9r" secondAttribute="trailing" id="4KK-gj-D1I"/>
                             <constraint firstItem="w1D-MX-hx3" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="5As-qM-tsS"/>
                             <constraint firstAttribute="trailing" secondItem="w1D-MX-hx3" secondAttribute="trailing" id="7rn-Of-vpW"/>
                             <constraint firstItem="XSL-8U-p48" firstAttribute="top" secondItem="AdH-oQ-xB7" secondAttribute="top" id="8oy-po-788"/>
@@ -68,11 +76,13 @@
                             <constraint firstItem="FRJ-wF-ukw" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="IY4-1Y-mU9"/>
                             <constraint firstItem="fLv-1R-6Ot" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="QyI-Yz-Gav"/>
                             <constraint firstAttribute="bottom" secondItem="fLv-1R-6Ot" secondAttribute="bottom" id="S3q-g8-aJ0"/>
+                            <constraint firstItem="ed7-a7-wxz" firstAttribute="bottom" secondItem="dnJ-Po-P9r" secondAttribute="top" id="Sk1-61-K96"/>
+                            <constraint firstItem="dnJ-Po-P9r" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="TkT-s2-8Yz"/>
                             <constraint firstItem="w1D-MX-hx3" firstAttribute="top" secondItem="YH7-tX-fhw" secondAttribute="bottom" id="Ujs-dC-BoZ"/>
                             <constraint firstItem="FRJ-wF-ukw" firstAttribute="top" secondItem="w1D-MX-hx3" secondAttribute="bottom" id="VTd-4N-KGA"/>
                             <constraint firstItem="ed7-a7-wxz" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="XHv-M6-mRb"/>
                             <constraint firstItem="ed7-a7-wxz" firstAttribute="top" secondItem="FRJ-wF-ukw" secondAttribute="bottom" id="Yqv-AT-eNo"/>
-                            <constraint firstItem="fLv-1R-6Ot" firstAttribute="top" secondItem="ed7-a7-wxz" secondAttribute="bottom" id="d6o-d7-Wgm"/>
+                            <constraint firstItem="fLv-1R-6Ot" firstAttribute="top" secondItem="dnJ-Po-P9r" secondAttribute="bottom" id="d6o-d7-Wgm"/>
                             <constraint firstItem="XSL-8U-p48" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="f2c-L8-aLx"/>
                             <constraint firstAttribute="trailing" secondItem="XSL-8U-p48" secondAttribute="trailing" id="kzE-ps-2Wr"/>
                             <constraint firstAttribute="trailing" secondItem="fLv-1R-6Ot" secondAttribute="trailing" id="lqH-88-4my"/>
@@ -86,6 +96,7 @@
                         <outlet property="searchButton" destination="fLv-1R-6Ot" id="o59-Bn-D53"/>
                         <outlet property="settingsButton" destination="ed7-a7-wxz" id="RzN-Pl-VyR"/>
                         <outlet property="splitScreenButton" destination="XSL-8U-p48" id="kZq-2v-Djz"/>
+                        <outlet property="testimonyButton" destination="dnJ-Po-P9r" id="L1E-b5-kH0"/>
                         <outlet property="timelineToggleButton" destination="w1D-MX-hx3" id="ynW-SB-HsR"/>
                     </connections>
                 </viewController>
