Current attempt at switching to MenuButton implementation

--- a/WindowExplorer/Sources/Controllers/MenuViewController/Menu.storyboard
+++ b/WindowExplorer/Sources/Controllers/MenuViewController/Menu.storyboard
@@ -13,91 +13,84 @@
                         <rect key="frame" x="0.0" y="0.0" width="50" height="350"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XSL-8U-p48">
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="ceY-yx-jPe" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="300" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="ZuQ-R3-pkR"/>
-                                    <constraint firstAttribute="height" constant="50" id="tgK-0D-WW1"/>
+                                    <constraint firstAttribute="width" constant="50" id="140-p7-e7E"/>
+                                    <constraint firstAttribute="height" constant="50" id="YoZ-BQ-bOH"/>
                                 </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="s3y-ox-dYc"/>
-                            </imageView>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YH7-tX-fhw">
+                            </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="qAo-tK-U4U" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="250" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="mz3-xN-JgI"/>
+                                    <constraint firstAttribute="height" constant="50" id="nOS-E5-StX"/>
                                 </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ZZq-63-8Q9"/>
-                            </imageView>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w1D-MX-hx3">
+                            </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="6n8-Ku-Mg1" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="200" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="4jJ-XJ-ov1"/>
+                                    <constraint firstAttribute="height" constant="50" id="1gh-YV-e3m"/>
                                 </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Pan-ey-4a3"/>
-                            </imageView>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FRJ-wF-ukw">
+                            </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="5R0-Ed-pJG" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="150" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="NM9-Sv-kbi"/>
+                                    <constraint firstAttribute="height" constant="50" id="pes-rd-KiZ"/>
                                 </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Zwa-5w-z3R"/>
-                            </imageView>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ed7-a7-wxz">
+                            </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="u8e-Pu-hpK" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="100" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Zef-0g-RyZ"/>
+                                    <constraint firstAttribute="height" constant="50" id="bTx-z1-5K1"/>
                                 </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Nka-6M-Vao"/>
-                            </imageView>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dnJ-Po-P9r">
+                            </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="uLI-Vt-2Vu" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="50" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="4YC-FU-SLE"/>
+                                    <constraint firstAttribute="height" constant="50" id="EGx-UK-hQR"/>
                                 </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="MWi-LQ-lcn"/>
-                            </imageView>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fLv-1R-6Ot">
+                            </customView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="CJK-LW-WGG" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="QCx-g6-cHZ"/>
+                                    <constraint firstAttribute="height" constant="50" id="C6h-D1-Y5r"/>
                                 </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="y54-2S-Nvq"/>
-                            </imageView>
+                            </customView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="dnJ-Po-P9r" secondAttribute="trailing" id="4KK-gj-D1I"/>
-                            <constraint firstItem="w1D-MX-hx3" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="5As-qM-tsS"/>
-                            <constraint firstAttribute="trailing" secondItem="w1D-MX-hx3" secondAttribute="trailing" id="7rn-Of-vpW"/>
-                            <constraint firstItem="XSL-8U-p48" firstAttribute="top" secondItem="AdH-oQ-xB7" secondAttribute="top" id="8oy-po-788"/>
-                            <constraint firstItem="YH7-tX-fhw" firstAttribute="top" secondItem="XSL-8U-p48" secondAttribute="bottom" id="Dih-s6-6dt"/>
-                            <constraint firstAttribute="trailing" secondItem="ed7-a7-wxz" secondAttribute="trailing" id="DrW-xJ-6NL"/>
-                            <constraint firstItem="YH7-tX-fhw" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="Dwx-Gl-ro4"/>
-                            <constraint firstAttribute="trailing" secondItem="YH7-tX-fhw" secondAttribute="trailing" id="IA7-dL-8OL"/>
-                            <constraint firstItem="FRJ-wF-ukw" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="IY4-1Y-mU9"/>
-                            <constraint firstItem="fLv-1R-6Ot" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="QyI-Yz-Gav"/>
-                            <constraint firstAttribute="bottom" secondItem="fLv-1R-6Ot" secondAttribute="bottom" id="S3q-g8-aJ0"/>
-                            <constraint firstItem="ed7-a7-wxz" firstAttribute="bottom" secondItem="dnJ-Po-P9r" secondAttribute="top" id="Sk1-61-K96"/>
-                            <constraint firstItem="dnJ-Po-P9r" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="TkT-s2-8Yz"/>
-                            <constraint firstItem="w1D-MX-hx3" firstAttribute="top" secondItem="YH7-tX-fhw" secondAttribute="bottom" id="Ujs-dC-BoZ"/>
-                            <constraint firstItem="FRJ-wF-ukw" firstAttribute="top" secondItem="w1D-MX-hx3" secondAttribute="bottom" id="VTd-4N-KGA"/>
-                            <constraint firstItem="ed7-a7-wxz" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="XHv-M6-mRb"/>
-                            <constraint firstItem="ed7-a7-wxz" firstAttribute="top" secondItem="FRJ-wF-ukw" secondAttribute="bottom" id="Yqv-AT-eNo"/>
-                            <constraint firstItem="fLv-1R-6Ot" firstAttribute="top" secondItem="dnJ-Po-P9r" secondAttribute="bottom" id="d6o-d7-Wgm"/>
-                            <constraint firstItem="XSL-8U-p48" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="f2c-L8-aLx"/>
-                            <constraint firstAttribute="trailing" secondItem="XSL-8U-p48" secondAttribute="trailing" id="kzE-ps-2Wr"/>
-                            <constraint firstAttribute="trailing" secondItem="fLv-1R-6Ot" secondAttribute="trailing" id="lqH-88-4my"/>
-                            <constraint firstAttribute="trailing" secondItem="FRJ-wF-ukw" secondAttribute="trailing" id="mpF-LE-HQf"/>
+                            <constraint firstAttribute="bottom" secondItem="CJK-LW-WGG" secondAttribute="bottom" id="6Ew-jZ-Mg8"/>
+                            <constraint firstItem="ceY-yx-jPe" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="7ih-Gd-OIv"/>
+                            <constraint firstItem="ceY-yx-jPe" firstAttribute="bottom" secondItem="qAo-tK-U4U" secondAttribute="top" id="A8x-Ig-WJ0"/>
+                            <constraint firstItem="CJK-LW-WGG" firstAttribute="top" secondItem="uLI-Vt-2Vu" secondAttribute="bottom" id="DHQ-lv-OYa"/>
+                            <constraint firstAttribute="trailing" secondItem="6n8-Ku-Mg1" secondAttribute="trailing" id="EaZ-Bp-62I"/>
+                            <constraint firstAttribute="trailing" secondItem="CJK-LW-WGG" secondAttribute="trailing" id="F1Q-Ig-TfO"/>
+                            <constraint firstItem="uLI-Vt-2Vu" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="K4B-Tq-8kg"/>
+                            <constraint firstItem="qAo-tK-U4U" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="O54-Tb-veB"/>
+                            <constraint firstAttribute="trailing" secondItem="u8e-Pu-hpK" secondAttribute="trailing" id="QL5-t5-4Cn"/>
+                            <constraint firstItem="5R0-Ed-pJG" firstAttribute="top" secondItem="6n8-Ku-Mg1" secondAttribute="bottom" id="Rdk-2s-VNw"/>
+                            <constraint firstItem="u8e-Pu-hpK" firstAttribute="top" secondItem="5R0-Ed-pJG" secondAttribute="bottom" id="SJA-jK-qlS"/>
+                            <constraint firstAttribute="trailing" secondItem="uLI-Vt-2Vu" secondAttribute="trailing" id="Xb7-42-ons"/>
+                            <constraint firstItem="u8e-Pu-hpK" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="Xom-B2-piA"/>
+                            <constraint firstItem="CJK-LW-WGG" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="d7d-J7-iYy"/>
+                            <constraint firstAttribute="trailing" secondItem="qAo-tK-U4U" secondAttribute="trailing" id="eXE-Q3-O6H"/>
+                            <constraint firstAttribute="trailing" secondItem="ceY-yx-jPe" secondAttribute="trailing" id="iMZ-P7-QgZ"/>
+                            <constraint firstItem="5R0-Ed-pJG" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="iQ5-c2-NyI"/>
+                            <constraint firstAttribute="trailing" secondItem="5R0-Ed-pJG" secondAttribute="trailing" id="ipd-LD-drD"/>
+                            <constraint firstItem="ceY-yx-jPe" firstAttribute="top" secondItem="AdH-oQ-xB7" secondAttribute="top" id="kZ4-XQ-GtY"/>
+                            <constraint firstItem="6n8-Ku-Mg1" firstAttribute="top" secondItem="qAo-tK-U4U" secondAttribute="bottom" id="rWL-je-p1L"/>
+                            <constraint firstItem="uLI-Vt-2Vu" firstAttribute="top" secondItem="u8e-Pu-hpK" secondAttribute="bottom" id="tGd-lP-NSU"/>
+                            <constraint firstItem="6n8-Ku-Mg1" firstAttribute="leading" secondItem="AdH-oQ-xB7" secondAttribute="leading" id="vzj-YO-Aue"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="informationButton" destination="FRJ-wF-ukw" id="pEf-HY-Ve9"/>
-                        <outlet property="mapToggleButton" destination="YH7-tX-fhw" id="tP1-Lm-lkU"/>
+                        <outlet property="informationButton" destination="5R0-Ed-pJG" id="AxB-U1-cWu"/>
+                        <outlet property="mapToggleButton" destination="qAo-tK-U4U" id="Gfb-kw-twW"/>
                         <outlet property="menuView" destination="AdH-oQ-xB7" id="SPU-eJ-wgZ"/>
-                        <outlet property="searchButton" destination="fLv-1R-6Ot" id="o59-Bn-D53"/>
-                        <outlet property="settingsButton" destination="ed7-a7-wxz" id="RzN-Pl-VyR"/>
-                        <outlet property="splitScreenButton" destination="XSL-8U-p48" id="kZq-2v-Djz"/>
-                        <outlet property="testimonyButton" destination="dnJ-Po-P9r" id="L1E-b5-kH0"/>
-                        <outlet property="timelineToggleButton" destination="w1D-MX-hx3" id="ynW-SB-HsR"/>
+                        <outlet property="searchButton" destination="CJK-LW-WGG" id="7OL-qY-0Ba"/>
+                        <outlet property="settingsButton" destination="u8e-Pu-hpK" id="NUw-lW-1Km"/>
+                        <outlet property="splitScreenButton" destination="ceY-yx-jPe" id="ijE-Uu-1hs"/>
+                        <outlet property="testimonyButton" destination="uLI-Vt-2Vu" id="Iya-YN-aPW"/>
+                        <outlet property="timelineToggleButton" destination="6n8-Ku-Mg1" id="4mi-gG-I92"/>
                     </connections>
                 </viewController>
                 <customObject id="vEQ-kv-rRL" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
