--- a/WindowExplorer/Sources/Views/MenuButton/MenuButton.xib
+++ b/WindowExplorer/Sources/Views/MenuButton/MenuButton.xib
@@ -5,32 +5,36 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner"/>
+        <customObject id="-2" userLabel="File's Owner" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
+            <connections>
+                <outlet property="contentView" destination="c22-O7-iKe" id="bhd-Je-QqT"/>
+                <outlet property="lockIcon" destination="Cgi-aC-f8G" id="iFR-cK-wPa"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <customView translatesAutoresizingMaskIntoConstraints="NO" id="Xy0-5B-IRV">
-                    <rect key="frame" x="42" y="42" width="5" height="5"/>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cgi-aC-f8G">
+                    <rect key="frame" x="37" y="37" width="10" height="10"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="5" id="D3v-ef-sUm"/>
-                        <constraint firstAttribute="height" constant="5" id="pvO-fC-oFo"/>
+                        <constraint firstAttribute="height" constant="10" id="Aog-rb-P52"/>
+                        <constraint firstAttribute="width" constant="10" id="Cqk-wA-rMA"/>
                     </constraints>
-                </customView>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Lock Icon" id="R8Q-Ok-qfE"/>
+                </imageView>
             </subviews>
             <constraints>
-                <constraint firstItem="Xy0-5B-IRV" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="3" id="HVP-9o-t23"/>
-                <constraint firstAttribute="trailing" secondItem="Xy0-5B-IRV" secondAttribute="trailing" constant="3" id="ujv-kH-ddR"/>
+                <constraint firstAttribute="trailing" secondItem="Cgi-aC-f8G" secondAttribute="trailing" constant="3" id="1Q8-y0-fKs"/>
+                <constraint firstItem="Cgi-aC-f8G" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="3" id="guq-DG-qBb"/>
             </constraints>
             <point key="canvasLocation" x="-48" y="92"/>
         </customView>
-        <customObject id="KnI-QZ-Add" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target">
-            <connections>
-                <outlet property="contentView" destination="c22-O7-iKe" id="K9C-98-7v1"/>
-                <outlet property="lockView" destination="Xy0-5B-IRV" id="vZ2-5p-KD0"/>
-            </connections>
-        </customObject>
+        <customObject id="KnI-QZ-Add" customClass="MenuButton" customModule="WindowExplorer" customModuleProvider="target"/>
     </objects>
+    <resources>
+        <image name="Lock Icon" width="7" height="9"/>
+    </resources>
 </document>
